--- a/src/HpSubscriptions/HpSubscriptions.csproj
+++ b/src/HpSubscriptions/HpSubscriptions.csproj
@@ -239,7 +239,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
-    <None Include="Properties\PublishProfiles\HpSubscriptions - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\HpDfeSubscriptions - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
