--- a/src/HpSubscriptions/HpSubscriptions.csproj
+++ b/src/HpSubscriptions/HpSubscriptions.csproj
@@ -255,6 +255,7 @@
       <LastGenOutput>T4MVC.cs</LastGenOutput>
     </None>
     <None Include="T4MVC.tt.settings.xml" />
+    <Content Include="Scripts\run_prettify.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -272,6 +273,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <None Include="T4MVC.tt.hooks.t4" />
     <Content Include="Views\Subscriptions\Index.cshtml" />
+    <None Include="Views\Subscriptions\Content.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
